Build indexes from HDT